--- a/royal_cameleon_fork.html
+++ b/royal_cameleon_fork.html
@@ -18,6 +18,7 @@
 		
 		<link rel="shortcut icon" href="{Favicon}" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script src='http://cdnjs.cloudflare.com/ajax/libs/prettify/188.0.0/prettify.js' type='text/javascript'></script>
 		
 		<style type="text/css">
 			#footer { background-color: {color:Color1}; }
@@ -30,6 +31,59 @@
  			blockquote { border-color: {color:Color2}; }
  			.tagshowing { color: {color:Color2};}
  			h3 a:hover {color: {color:Color2};}
+ 			/* The kids are still standing with their arms folded tight */
+ 			/* Pretty printing styles. Used with prettify.js. */
+
+			/* SPAN elements with the classes below are added by prettyprint. */
+			.pln { color: #000 }  /* plain text */
+			
+			@media screen {
+			  .str { color: #080 }  /* string content */
+			  .kwd { color: #008 }  /* a keyword */
+			  .com { color: #800 }  /* a comment */
+			  .typ { color: #606 }  /* a type name */
+			  .lit { color: #066 }  /* a literal value */
+			  /* punctuation, lisp open bracket, lisp close bracket */
+			  .pun, .opn, .clo { color: #660 }
+			  .tag { color: #008 }  /* a markup tag name */
+			  .atn { color: #606 }  /* a markup attribute name */
+			  .atv { color: #080 }  /* a markup attribute value */
+			  .dec, .var { color: #606 }  /* a declaration; a variable name */
+			  .fun { color: red }  /* a function name */
+			}
+			
+			/* Use higher contrast and text-weight for printable form. */
+			@media print, projection {
+			  .str { color: #060 }
+			  .kwd { color: #006; font-weight: bold }
+			  .com { color: #600; font-style: italic }
+			  .typ { color: #404; font-weight: bold }
+			  .lit { color: #044 }
+			  .pun, .opn, .clo { color: #440 }
+			  .tag { color: #006; font-weight: bold }
+			  .atn { color: #404 }
+			  .atv { color: #060 }
+			}
+			
+			/* Put a border around prettyprinted code snippets. */
+			pre.prettyprint { padding: 2px; border: 1px solid #888; background: #8c9290 url('https://s3.amazonaws.com/forever-files/web_content/mottled_background.gif'); }
+			
+			/* Specify class=linenums on a pre to get line numbering */
+			ol.linenums { margin-top: 0; margin-bottom: 0 } /* IE indents via margin-left */
+			li.L0,
+			li.L1,
+			li.L2,
+			li.L3,
+			li.L5,
+			li.L6,
+			li.L7,
+			li.L8 { list-style-type: none }
+			/* Alternate shading for lines */
+			li.L1,
+			li.L3,
+			li.L5,
+			li.L7,
+			li.L9 { background: #eee }
 			{CustomCSS}
 		</style>
 		
@@ -218,9 +272,16 @@
 		</div>
 	</div>
 	
+	<script type="text/javascript">
+	    $(document).ready(function() {
+		  prettyPrint();
+		});
+	</script>
+	
 	{block:IfGoogleAnalyticsID}
     
     <script type="text/javascript">
+    
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 		</script>
